fix(core): Lens fast-paths honor the null contract; README at-a-glance table
The read-fold work rerouted the composed-traversal branches of
toList/count/exists but left the Lens instanceof fast-paths bypassing the
visitor's null guards, contradicting the documented null table:
count(null) returned 1, exists(null) returned true, and toList NPE'd via
List.of on both a null root and a null focus. Null root now focuses
nothing ([], 0, false) and a null focus materializes as
Collections.singletonList(null) — "a null focus is still a focus", same as
the traversal path. Two pins added to TelescopeTest.

Also: an at-a-glance needs/answers table in the README (with the honest
MapStruct concession line), and the claim-inventory capability count
catches up to the nine-capability native verifier.